--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <link rel="stylesheet" href="./style.css">
     <!-- Don't forget to link your CSS file! -->
   </head>
   <body>
@@ -10,7 +11,7 @@
       <!-- logo -->
       <h1>Exceptional Realty Group</h1>
 
-      <nav>
+      <nav class="nav">
         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
@@ -25,7 +26,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
-    <section id="details">
+    <section id="details" class="flex-container">
       <div>
         <h3>Contact</h3>
         <p>
@@ -35,7 +36,7 @@
         </p>
       </div>
       
-      <div>
+      <div class="div">
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
